tests/ui/mir-dataflow/uninits-1.stderr
error: crablangc_peek: bit not set
  --> $DIR/uninits-1.rs:18:5
   |
LL |     crablangc_peek(&x);
   |     ^^^^^^^^^^^^^^

error: crablangc_peek: bit not set
  --> $DIR/uninits-1.rs:19:5
   |
LL |     crablangc_peek(&y);
   |     ^^^^^^^^^^^^^^

error: crablangc_peek: bit not set
  --> $DIR/uninits-1.rs:20:5
   |
LL |     crablangc_peek(&z);
   |     ^^^^^^^^^^^^^^

error: crablangc_peek: bit not set
  --> $DIR/uninits-1.rs:36:5
   |
LL |     crablangc_peek(&x);
   |     ^^^^^^^^^^^^^^

error: crablangc_peek: bit not set
  --> $DIR/uninits-1.rs:44:5
   |
LL |     crablangc_peek(&ret);
   |     ^^^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 6 previous errors

